# bigger_picture

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compute_homographies.py  devenv.nix  docker-compose-prd.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/docs/: adding-a-controller.md
backend/src/: bootstrap_admin.py  config.py  constants.py  create_users.py  csrf.py  db.py  main.py  util.py
backend/tests/: conftest.py  test_admin_backups.py  test_admin_fun_facts_import.py  test_admin_users.py  test_annotate_candidates.py  test_annotate_dives.py  test_annotate_fun_facts.py  test_annotate_points.py  test_annotate_quests.py  test_annotate_regions.py  test_annotate_stats.py  test_auth.py  test_bootstrap_admin.py  test_create_users.py  test_csrf.py  test_dataset_cameras.py  test_dataset_candidate_pairs.py  test_dataset_dives.py  test_dataset_export.py  test_dataset_fun_facts.py  test_dataset_helper_images.py  test_dataset_image_pairs.py  test_dataset_images.py  test_dataset_labels.py  test_dataset_point_annotations.py  test_dataset_regions.py  test_dataset_zip_upload.py  test_db.py  test_image_update_files.py  test_leaderboard.py  test_middleware_access_control.py  test_migrations.py  test_password_auth.py  test_seed_unknown_camera.py  (+4 more)
docs/: candidate-auto-review.md  daily-quests.md  zip-upload.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: reset.py  seed_examples.py  sort_images.py  upload_dataset.py
(+189 files in other folders)
