[project]
name = "connecting-the-dots"
version = "0.1.0"
description = "Playground for Citizen Science Interface to Crowd Source Ground-Truth Annotations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.0",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "numpy>=2.3.0",
    "opencv-python>=4.12.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "httpx2>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
